--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-spring.datasource.url=jdbc:postgresql://${HOST_DB}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+  spring.datasource.url=jdbc:postgresql://${HOST_DB}:${DB_PORT}/${DB_NAME}
+  spring.datasource.username=${DB_USERNAME}
+  spring.datasource.password=${DB_PASSWORD}
+  spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+  spring.jpa.show-sql=true
+  spring.jpa.properties.hibernate.format_sql=true
+  spring.jpa.hibernate.ddl-auto=update
+  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#  spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
+#  spring.datasource.username=postgres
+#  spring.datasource.password=Joe#123
+#  spring.datasource.driver-class-name=org.postgresql.Driver
+
+#  spring.jpa.show-sql=true
+#  spring.jpa.properties.hibernate.format_sql=true
+#  spring.jpa.hibernate.ddl-auto=update
+#  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
