--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,15 @@
 
   spring.jpa.show-sql=true
   spring.jpa.properties.hibernate.format_sql=true
-  spring.jpa.hibernate.ddl-auto=update
+  spring.jpa.hibernate.ddl-auto=none
   spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 #  spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
 #  spring.datasource.username=postgres
-#  spring.datasource.password=Joe#123
+#  spring.datasource.password=
 #  spring.datasource.driver-class-name=org.postgresql.Driver
 
 #  spring.jpa.show-sql=true
 #  spring.jpa.properties.hibernate.format_sql=true
-#  spring.jpa.hibernate.ddl-auto=update
+#  spring.jpa.hibernate.ddl-auto=none
 #  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
