testando conexão do DB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+                      # RAILWAY #
+                      
   spring.datasource.url=jdbc:postgresql://${HOST_DB}:${DB_PORT}/${DB_NAME}
   spring.datasource.username=${DB_USERNAME}
   spring.datasource.password=${DB_PASSWORD}
@@ -5,8 +7,10 @@
 
   spring.jpa.show-sql=true
   spring.jpa.properties.hibernate.format_sql=true
-  spring.jpa.hibernate.ddl-auto=none
+  spring.jpa.hibernate.ddl-auto=update
   spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+					# LOCALHOST #	
 
 #  spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
 #  spring.datasource.username=postgres
@@ -17,3 +21,4 @@
 #  spring.jpa.properties.hibernate.format_sql=true
 #  spring.jpa.hibernate.ddl-auto=none
 #  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
