atualização do serviço e implementação do DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
                       # RAILWAY #
                       
-  spring.datasource.url=jdbc:postgresql://${HOST_DB}:${DB_PORT}/${DB_NAME}
-  spring.datasource.username=${DB_USERNAME}
-  spring.datasource.password=${DB_PASSWORD}
+#  spring.datasource.url=jdbc:postgresql://${HOST_DB}:${DB_PORT}/${DB_NAME}
+#  spring.datasource.username=${DB_USERNAME}
+#  spring.datasource.password=${DB_PASSWORD}
+#  spring.datasource.driver-class-name=org.postgresql.Driver
+
+#  spring.jpa.show-sql=true
+#  spring.jpa.properties.hibernate.format_sql=true
+#  spring.jpa.hibernate.ddl-auto=update
+#  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+					# LOCALHOST #	
+
+  spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
+  spring.datasource.username=postgres
+  spring.datasource.password=Joe#123
   spring.datasource.driver-class-name=org.postgresql.Driver
 
   spring.jpa.show-sql=true
   spring.jpa.properties.hibernate.format_sql=true
   spring.jpa.hibernate.ddl-auto=update
   spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-					# LOCALHOST #	
-
-#  spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
-#  spring.datasource.username=postgres
-#  spring.datasource.password=
-#  spring.datasource.driver-class-name=org.postgresql.Driver
-
-#  spring.jpa.show-sql=true
-#  spring.jpa.properties.hibernate.format_sql=true
-#  spring.jpa.hibernate.ddl-auto=none
-#  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
