--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/pet_db
 spring.datasource.username=postgres
 spring.datasource.password=Joe#123
 spring.datasource.driver-class-name=org.postgresql.Driver
