--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-spring.datasource.url=${URL_DB}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
-
-# spring.profiles.active=prod 
+spring.profiles.active=dev 
